# Sysprog

./: Theorie 6 Vladislaw Best fit geändert.xlsx  Theorie 6.xlsx
Aufgabe1/: Makefile  PrioQueue  PrioQueue.c  PrioQueue.h  main.c  main.d
Aufgabe2/: Makefile  bruteforce.c  bruteforce.h  main.c  main.h  sha256.c  sha256.h  utils.c  utils.h
Aufgabe3/: Bool.h  CMakeLists.txt  Termcolor.h  compile.sh  main.c  task_pool_tafeluebung.json  task_pool_vorlesung.json
Aufgabe3/Scheduling/: FCFS.c  FCFS.h  MLF.c  MLF.h  Monkey.c  Monkey.h  PriorityQueue.c  PriorityQueue.h  Queue.c  Queue.h  RR.c  RR.h  SJN.c  SJN.h  Scheduling.c  Scheduling.h
Aufgabe3/Tasks/: Task.c  Task.h  TaskPool.c  TaskPool.h
Aufgabe4/: Makefile  ReadMe.txt  config.h  field.c  field.h  printer.c  printer.h  rules.c  rules.h  thread.c  thread.h  utils.c  utils.h  wa-tor.c
Aufgabe4/population_sets/: format.txt  set_1  set_2  set_3
Aufgabe5/: BankierAlog.c  Makefile  a_b_in.txt  a_out.txt  b_out.txt  banker.c  d_in.txt  d_out.txt  deadlock_avoidance.c  main.c  main.h  readme.txt  sicher_out.txt  test_vorlesung.txt  test_vorlesung_out.txt  unsicher.txt  unsicher_out.txt  utils.c
